--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 class="nav-link active"
                 aria-current="page"
                 href="index.html"
-                target="_blank"
+                
                 >Home</a
               >
             </li>
@@ -54,7 +54,7 @@
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="soup.html">Soups</a></li>
                 <li>
-                  <a class="dropdown-item" href="appe.html">Appetizers</a>
+                  <a class="dropdown-item" href="appetizer.html">Appetizers</a>
                 </li>
                 <li><a class="dropdown-item" href="#">Main Dish</a></li>
                 <li><a class="dropdown-item" href="#">Surf & Turf</a></li>
@@ -63,17 +63,22 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" target="_blank"
+              <a class="nav-link" href="about.html" 
                 >About Garden</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="news.html" target="_blank"
+              <a class="nav-link" href="news.html" 
                 >News & Event</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html" target="_blank"
+              <a class="nav-link" href="gallery.html" 
+                >Photo Gallery</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html" 
                 >Contact</a
               >
             </li>
