--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>news</title>
+    <title>Gallery</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta
@@ -99,7 +99,7 @@
     <div class="banner">
       <h1>GALLERY</h1>
     </div>
- <div class="garllery">
+ <div class="">
         <div class="container">
             <div class="gallery-main">
                 <div class="row">
