--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer" >
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <link rel="stylesheet" href="assets/css/style.css" >
-    <title>Document</title>
+    <title>Garden Place</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md">
