--- a/soup.html
+++ b/soup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>news</title>
+    <title>soup</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta
