--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                       src="assets/images/our-menu-01.jpg"
                       alt=""
                       class="w-100" >
-                    <a href="#" class="image-text btn-2"> Soups </a>
+                    <a href="#" class="image-text btn-2"> Soups</a>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -177,13 +177,13 @@
             </div>
             <div class="col-md-4">
               <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-12 left">
                   <div class="menu-image">
                     <div class="img-left">
                       <img
                         src="assets/images/our-menu-08.jpg"
                         alt=""
-                        class="w-100" >
+                        class="w-100">
                       <a href="#" class="image-text btn-2"> appetizer </a>
                     </div>
                   </div>
