change theme color

--- a/index.html
+++ b/index.html
@@ -323,14 +323,13 @@
         </div>
       </div>
     </section>
-
     <section id="book-table">
       <div class="container">
         <div class="row">
           <div class="col-md-7">
             <div class="form">
               <div class="form-text">
-                <p>Reservation</p>
+                <span>Reservation</span>
                 <h2>Book table</h2>
               </div>
               <div class="main-form">
